src/objects/Complex_Product__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>This custom setting will be used to breakdown the contents of a complex product.</description>
    <fields>
        <fullName>Number_of_Cards__c</fullName>
        <description>This is the number of Library Cards for this product.</description>
        <label>Number of Cards</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Training_Units__c</fullName>
        <description>This is the number of training units for this product.</description>
        <label>Number of Training Units</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>This is the product code</description>
        <label>Product Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Complex Product</label>
</CustomObject>